Added text and cover image

--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Mpumi's Magic Beads</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <img src="Mpumi_Eng.jpg"/>
+    <h1>Mpumi's Magic Beads</h1>
+    <h3>Lebohang Masango and Masego Morulane</h3>
 
-    <h1>First heading</h1>
-
-    <p>An introductory paragraph.</p>
-
+    <p>Mpumi’s Magic Beads is a delightful story about friendship, self-esteem, discovery and beautiful hair in the big city of Joburg. It follows the sudden adventures of Mpumi, Asante and Tshiamo as they see the world around them from new heights and realise all of the fun waiting to be discovered outside of their classroom. This story is a great read for the whole family, especially children aged between 5 – 10 years old.</p>
+  
+    <p>The beads <em>jingle and jangle and sparkle</em>. The girls giggle with glee! Mpumi and her friends discover magic in her hair and what begins as an ordinary school day in Joburg is suddenly full of adventure everywhere!</p>
+   
+    <h4>Languages Available</h4>
     <ul>
-        <li>First list item.</li>
-        <li>Second list item.</li>
+        <li>English</li>
+        <li>IsiXhosa</li>
+        <li>IsiZulu</li>
+        <li>Afrikaans</li>
+        <li>Sesotho</li>
+        <li>Setswana</li>
+        <li>Xitsonga</li>
     </ul>
+  
+   <span class="purchase-button"><a href="https://www.newafricabooks.com/shop-all-books/mpumis-magic-beads-lebohang-masango">Buy Now</a></span>
 
     <script src="script.js"></script>
 </body>
